Update to layer1_size

--- a/ipynb_with_output/Document classification with word embeddings tutorial - with output.ipynb
+++ b/ipynb_with_output/Document classification with word embeddings tutorial - with output.ipynb
@@ -1802,7 +1802,7 @@
     "    if not mean:\n",
     "        logging.warning(\"cannot compute similarity with no input %s\", words)\n",
     "        # FIXME: remove these examples in pre-processing\n",
-    "        return np.zeros(wv.layer_size,)\n",
+    "        return np.zeros(wv.layer1_size,)\n",
     "\n",
     "    mean = gensim.matutils.unitvec(np.array(mean).mean(axis=0)).astype(np.float32)\n",
     "    return mean\n",
