--- a/Document classification with word embeddings tutorial.ipynb
+++ b/Document classification with word embeddings tutorial.ipynb
@@ -1722,7 +1722,7 @@
     }
    ],
    "source": [
-    "wv.layer_size"
+    "wv.layer1_size"
    ]
   },
   {
@@ -1842,7 +1842,7 @@
     "    if not mean:\n",
     "        logging.warning(\"cannot compute similarity with no input %s\", words)\n",
     "        # FIXME: remove these examples in pre-processing\n",
-    "        return np.zeros(wv.layer_size,)\n",
+    "        return np.zeros(wv.layer1_size,)\n",
     "\n",
     "    mean = gensim.matutils.unitvec(np.array(mean).mean(axis=0)).astype(np.float32)\n",
     "    return mean\n",
