Update Document classification with word embeddings tutorial.ipynb

--- a/Document classification with word embeddings tutorial.ipynb
+++ b/Document classification with word embeddings tutorial.ipynb
@@ -1696,7 +1696,7 @@
    ],
    "source": [
     "%%time \n",
-    "wv = Word2Vec.load_word2vec_format(\n",
+    "wv = Word2Vec.KeyedVectors.load_word2vec_format(\n",
     "    \"~/GoogleNews-vectors-negative300.bin.gz\",\n",
     "    binary=True)\n",
     "wv.init_sims(replace=True)"
