--- a/ipynb_with_output/Document classification with word embeddings tutorial - with output.ipynb
+++ b/ipynb_with_output/Document classification with word embeddings tutorial - with output.ipynb
@@ -1686,7 +1686,7 @@
    ],
    "source": [
     "%%time \n",
-    "wv = Word2Vec.load_word2vec_format(\n",
+    "wv = Word2Vec.KeyedVectors.load_word2vec_format(\n",
     "    \"/data/w2v_googlenews/GoogleNews-vectors-negative300.bin.gz\",\n",
     "    binary=True)\n",
     "wv.init_sims(replace=True)"
