Changes for issue 14
More information: https://github.com/RaRe-Technologies/movie-plots-by-genre/issues/14

--- a/ipynb_with_output/Document classification with word embeddings tutorial - with output.ipynb
+++ b/ipynb_with_output/Document classification with word embeddings tutorial - with output.ipynb
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "my_tags = ['sci-fi' , 'action', 'comedy', 'fantasy', 'animation', 'romance']\n",
+    "my_tags = df.tag.unique()\n",
     "df.tag.value_counts().plot(kind=\"bar\", rot=0)"
    ]
   },
@@ -1001,7 +1001,7 @@
    "source": [
     "def evaluate_prediction(predictions, target, title=\"Confusion matrix\"):\n",
     "    print('accuracy %s' % accuracy_score(target, predictions))\n",
-    "    cm = confusion_matrix(target, predictions)\n",
+    "    cm = confusion_matrix(target, predictions, labels=my_tags)\n",
     "    print('confusion matrix\\n %s' % cm)\n",
     "    print('(row=expected, col=predicted)')\n",
     "    \n",
