Updated the notebook

--- a/Document classification with word embeddings tutorial.ipynb
+++ b/Document classification with word embeddings tutorial.ipynb
@@ -73,7 +73,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -128,7 +127,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -154,7 +152,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -167,7 +164,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -227,7 +223,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -823,7 +818,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -841,7 +835,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -864,7 +857,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -909,7 +901,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -933,9 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -978,7 +967,6 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1090,9 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1126,9 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1150,7 +1134,6 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1194,9 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1246,9 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def most_influential_words(vectorizer, genre_index=0, num_words=10):\n",
@@ -1260,9 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1302,7 +1279,6 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1345,9 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1378,7 +1352,6 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1422,9 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1474,7 +1445,6 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1502,7 +1472,6 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1536,7 +1505,6 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1586,9 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1672,9 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1696,18 +1660,14 @@
    ],
    "source": [
     "%%time \n",
-    "wv = Word2Vec.load_word2vec_format(\n",
-    "    \"~/GoogleNews-vectors-negative300.bin.gz\",\n",
-    "    binary=True)\n",
+    "wv = gensim.models.KeyedVectors.load_word2vec_format( \"~/GoogleNews-vectors-negative300.bin.gz\", binary=True)\n",
     "wv.init_sims(replace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
@@ -1739,9 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1884,7 +1842,6 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1898,9 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
@@ -1939,9 +1894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1952,9 +1905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1965,7 +1916,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1990,7 +1940,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2019,7 +1968,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2044,7 +1992,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -2067,7 +2014,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2181,7 +2127,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2195,9 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_tagged = train_data.apply(\n",
@@ -2226,9 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_tagged.values[50]"
@@ -2238,7 +2179,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2272,9 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -2286,7 +2224,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2312,9 +2249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time \n",
@@ -2339,9 +2274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "doc2vec_model.docvecs.most_similar('action')"
@@ -2362,7 +2295,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -2390,7 +2322,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
@@ -2527,9 +2458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -2541,9 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# shuffle training set for unbiased word2vec training\n",
@@ -2578,9 +2505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "next(tag_sentences(revtrain, my_tags[0]))"
@@ -2600,9 +2525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time \n",
@@ -2624,7 +2547,7 @@
     "for i in range(len(my_tags)):\n",
     "    slist = list(tag_sentences(revtrain, my_tags[i]))\n",
     "    print(my_tags[i], \"genre (\", len(slist), \")\")\n",
-    "    genremodels[i].train(  slist, total_examples=len(slist) )\n",
+    "    genremodels[i].train( slist, total_examples=len(slist) ,epochs = basemodel.epochs)\n",
     "# get the probs (note we give docprob a list of lists of words, plus the models)\n"
    ]
   },
@@ -2693,7 +2616,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2710,7 +2632,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2741,9 +2662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "evaluate_prediction(predictions, target, \"Deep IR with word2vec\")"
@@ -2836,7 +2755,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -3147,9 +3065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_tokenized = test_data.apply(lambda r: w2v_tokenize_text(r['plot']), axis=1).values\n",
@@ -3169,9 +3085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# the word2vec model was loaded with strings as byte-arrays so need to convert\n",
@@ -3182,9 +3096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vect = CountVectorizer(stop_words=\"english\").fit(flat_train_tokenized)\n",
@@ -3202,9 +3114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_tokenized[0]"
@@ -3244,9 +3154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "knn.fit(X_train, train_data['tag'])"
@@ -3262,9 +3170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time \n",
@@ -3315,23 +3221,23 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
